--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html lang="en" class="nojs">
 
+  <head>
+    <title> Resume Booster </title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+    <link rel="stylesheet" media="screen" href="css/reset.css" />
+    <link rel="stylesheet" media="screen" href="css/screen.css" />
+  </head>
+
+  <body>
+    <h2> Resume Booster </h2>
+    <h3>Is your resume empty? Or are you missing or want that 'it' factor? </h3>
+    <h3>If your answer is yes, SUBSCRIBE to get weekly tips and tricks on how to boost your resume!</h3>
+    <table>
+      <tr>
+        <th>Benefits</th>
+        <td>Find specific opportunities to your preferences (i.e.: jobs, internships, or volnunteering)</td>
+        <td>Learn tips & tricks on how you can make your resume  S T A N D O U T </td>
+      </tr>
+
+    <fieldset>
+      <legend> Subscribe Here! </legend>
+      <p><label>Email Address: <input type = "email" name = "email_id" placeholder = "abcd13@gmail.com"></label></p>
+    </fieldset>
+    <input type ="submit" value = "Subscribe">
+
+    <h3>"Continuous Improvement is better than delayed perfection" - Mark Twain </h3>
+
+
+  </body>
+
+</html>
