added missing table label

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <td>Find specific opportunities to your preferences (i.e.: jobs, internships, or volnunteering)</td>
         <td>Learn tips & tricks on how you can make your resume  S T A N D O U T </td>
       </tr>
+    </table>
 
     <fieldset>
       <legend> Subscribe Here! </legend>
