--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <h2> Resume Booster </h2>
     <h3>Is your resume empty? Or are you missing or want that 'it' factor? </h3>
-    <h3>If your answer is yes, SUBSCRIBE to get weekly tips and tricks on how to boost your resume!</h3>
+    <h3>If your answer is yes, SUBSCRIBE to get weekly tips and tricks on how to enhance your resume!</h3>
     <p>Benefits</p>
     <p>Find specific opportunities to your preferences (i.e.: jobs, internships, or volnunteering)</p>
     <p>Learn tips & tricks on how you can make your resume  S T A N D O U T </p>
