added form labels

--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
     <p>Find specific opportunities to your preferences (i.e.: jobs, internships, or volnunteering)</p>
     <p>Learn tips & tricks on how you can make your resume  S T A N D O U T </p>
 
-
-    <fieldset>
-      <legend> Subscribe Here! </legend>
-      <p><label>Email Address: <input type = "email" name = "email_id" placeholder = "abcd13@gmail.com"></label></p>
-    </fieldset>
-    <input type ="submit" value = "Subscribe">
+    <form>
+      <fieldset>
+        <legend> Subscribe Here! </legend>
+        <p><label>Email Address: <input type = "email" name = "email_id" placeholder = "abcd13@gmail.com"></label></p>
+      </fieldset>
+      <input type ="submit" value = "Subscribe">
+  </form>
 
     <h3>"Continuous Improvement is better than delayed perfection" - Mark Twain </h3>
 
