added first name in form

--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
     <form>
       <fieldset>
         <legend> Subscribe Here! </legend>
+        <p><label>First Names:<input type="text" name ="f_name" placeholder="Enter First Name"></label></p>
         <p><label>Email Address: <input type = "email" name = "email_id" placeholder = "abcd13@gmail.com"></label></p>
       </fieldset>
       <input type ="submit" value = "Subscribe">
-  </form>
+    </form>
 
     <h3>"Continuous Improvement is better than delayed perfection" - Mark Twain </h3>
 
