--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <h3>If your answer is yes, SUBSCRIBE to get weekly tips and tricks on how to enhance your resume!</h3>
 
     <div id= "c1">
-      <p>Benefits</p>
+      <p>Benefits:</p>
       <p>Find specific opportunities to your preferences (i.e.: jobs, internships, or volnunteering)</p>
-      <p>Learn tips & tricks on how you can make your resume  S T A N D O U T </p>
+      <p>Learn tips & tricks on how you can make your resume S T A N D O U T </p>
     </div>
 
     <div id = "c2">
