--- a/index.html
+++ b/index.html
@@ -14,21 +14,23 @@
     <h3>Is your resume empty? Or are you missing or want that 'it' factor? </h3>
     <h3>If your answer is yes, SUBSCRIBE to get weekly tips and tricks on how to enhance your resume!</h3>
 
-    <div id= "c1">
-      <p>Benefits:</p>
-      <p>Find specific opportunities to your preferences (i.e.: jobs, internships, or volnunteering)</p>
-      <p>Learn tips & tricks on how you can make your resume S T A N D O U T </p>
-    </div>
+    <div id = "c-container">
+      <div id= "c1">
+        <p>Benefits:</p>
+        <p>Find specific opportunities to your preferences (i.e.: jobs, internships, or volnunteering)</p>
+        <p>Learn tips & tricks on how you can make your resume S T A N D O U T </p>
+      </div>
 
-    <div id = "c2">
-      <form>
-        <fieldset>
-          <legend> Subscribe Here! </legend>
-          <p><label>First Names:<input type="text" name ="f_name" placeholder="Enter First Name"></label></p>
-          <p><label>Email Address: <input type = "email" name = "email_id" placeholder = "abcd13@gmail.com"></label></p>
-        </fieldset>
-        <input type ="submit" value = "Subscribe">
-      </form>
+      <div id = "c2">
+        <form>
+          <fieldset>
+            <legend> Subscribe Here! </legend>
+            <p><label>First Names:<input type="text" name ="f_name" placeholder="Enter First Name"></label></p>
+            <p><label>Email Address: <input type = "email" name = "email_id" placeholder = "abcd13@gmail.com"></label></p>
+          </fieldset>
+          <input type ="submit" value = "Subscribe">
+        </form>
+      </div>
     </div>
 
     <h3>"Continuous Improvement is better than delayed perfection" - Mark Twain </h3>
