chnagin submit button size

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <h2> Resume Booster </h2>
-    <h3>Is your resume empty? Or are you missing or want that 'it' factor? </h3>
+    <h3>Is your resume empty? Do you want that 'it' factor?</h3>
     <h3>If your answer is yes, SUBSCRIBE to get weekly tips and tricks on how to enhance your resume!</h3>
 
     <div id = "c-container">
@@ -36,5 +36,4 @@
     <h3>"Continuous Improvement is better than delayed perfection" - Mark Twain </h3>
 
   </body>
-
 </html>
