--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <form>
           <fieldset>
             <legend> Subscribe Here! </legend>
-            <p><label>First Names:<input type="text" name ="f_name" placeholder="Enter First Name"></label></p>
+            <p><label>First Name:<input type="text" name ="f_name" placeholder="Enter First Name"></label></p>
+            <p><label>Last Name:<input type="text" name ="l_name" placeholder="Enter Last Name"></label></p>
             <p><label>Email Address: <input type = "email" name = "email_id" placeholder = "abcd13@gmail.com"></label></p>
           </fieldset>
           <input type ="submit" value = "Subscribe">
