--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div id = "c-container">
       <div id= "c1">
         <p>Benefits:</p>
-        <p>1)Find specific opportunities to your preferences (i.e.: jobs, internships, or volnunteering)</p>
-        <p>2)Learn tips & tricks on how you can make your resume S T A N D O U T </p>
+        <p>1)Getting specific opportunities that fit your criteria (i.e.: jobs, internships, or volunteering)</p>
+        <p>2)Learning tips & tricks on how you can make your resume S T A N D O U T </p>
       </div>
 
       <div id = "c2">
