--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
     </div>
 
-    <h3>"Continuous Improvement is better than delayed perfection" - Mark Twain </h3>
+    <h3>"Continuous improvement is better than delayed perfection" - Mark Twain </h3>
 
   </body>
 </html>
