added js file, added div to create an id for js, added js to change the words

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
     <link rel="stylesheet" media="screen" href="css/reset.css" />
     <link rel="stylesheet" media="screen" href="css/screen.css" />
+    <script src="script.js" async></script>
   </head>
 
   <body>
@@ -15,6 +16,7 @@
     <h3>If your answer is yes, SUBSCRIBE to get weekly tips and tricks on how to enhance your resume!</h3>
 
     <div id = "c-container">
+
       <div id= "c1">
         <p>Benefits:</p>
         <p>1)Getting specific opportunities that fit your criteria (i.e.: jobs, internships, or volunteering)</p>
@@ -29,11 +31,13 @@
             <p><label>Last Name: <input type="text" name ="l_name" placeholder="Enter Last Name"></label></p>
             <p><label>Email Address: <input type = "email" name = "email_id" placeholder = "abcd13@gmail.com"></label></p>
           </fieldset>
-          <input type ="submit" value = "Subscribe">
+          <div id = "change">
+            <input type ="submit" value = "Subscribe">
+          </div>
         </form>
       </div>
-    </div>
 
+    </div>
     <h3>"Continuous improvement is better than delayed perfection" - Mark Twain </h3>
 
   </body>
