trying to add id in

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             <p><label>Last Name: <input type="text" name ="l_name" placeholder="Enter Last Name"></label></p>
             <p><label>Email Address: <input type = "email" name = "email_id" placeholder = "abcd13@gmail.com"></label></p>
           </fieldset>
-          <div id = "change">
-            <input type ="submit" value = "Subscribe">
-          </div>
+
+            <input id = "change" type ="submit" value = "Subscribe">
+          
         </form>
       </div>
 
