--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
     </div>
     <h3 id= "change">"Continuous improvement is better than delayed perfection" - Mark Twain </h3>
+    <button class="button1">Inspire Me!</button>
 
   </body>
 </html>
