--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     </div>
     <h3 id= "change">"Continuous improvement is better than delayed perfection" - Mark Twain </h3>
-    <button class="button1">Inspire Me!</button>
+    <button onclick="myFunction()" class="button1">Inspire Me</button>
 
   </body>
 </html>
