added for attributes

--- a/index.html
+++ b/index.html
@@ -27,9 +27,15 @@
         <form>
           <fieldset>
             <legend> Subscribe Here! </legend>
-            <p><label>First Name:<input type="text" name ="f_name" placeholder="Enter First Name"></label></p>
-            <p><label>Last Name: <input type="text" name ="l_name" placeholder="Enter Last Name"></label></p>
-            <p><label>Email Address: <input type = "email" name = "email_id" placeholder = "abcd13@gmail.com"></label></p>
+            <p><label for = "first name">First Name:</label></p>
+            <input type="text" name ="f_name" placeholder="Enter First Name">
+
+            <p><label for = "last name">Last Name: </label></p>
+            <input type="text" name ="l_name" placeholder="Enter Last Name">
+
+            <p><label for = "email id">Email Address:</label></p>
+            <input type = "email" name = "email_id" placeholder = "abcd13@gmail.com">
+            
           </fieldset>
             <input type ="submit" value = "Subscribe">
         </form>
