took out 'subscribe here'

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div id = "c2">
         <form>
           <fieldset>
-            <legend> Subscribe Here! </legend>
+            <legend></legend>
             <p><label for = "first name">First Name:</label></p>
             <input type="text" name ="f_name" placeholder="Enter First Name">
 
