--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         <form>
           <fieldset>
             <p><label for = "firstname">First Name:</label></p>
-            <input type="text" name ="f_name" placeholder="Enter First Name">
+            <input type="text" name ="f_name" id ="firstname" placeholder="Enter First Name">
 
             <p><label for = "lastname">Last Name:</label></p>
-            <input type="text" name ="l_name" placeholder="Enter Last Name">
+            <input type="text" name ="l_name" id ="lastname"placeholder="Enter Last Name">
 
             <p><label for = "emailid">Email Address:</label></p>
-            <input type = "email" name = "email_id" placeholder = "abcd13@gmail.com">
+            <input type = "email" name = "email_id" id ="emailid" placeholder = "abcd13@gmail.com">
 
           </fieldset>
             <input type ="submit" value = "Subscribe">
