added method, action and autocomplete attributes to form

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
 
       <div id = "c2">
-        <form>
+        <form action="#null" method="get" autocomplete="on">
           <fieldset>
             <p><label for = "firstname">First Name:</label></p>
             <input type="text" name ="f_name" id ="firstname" placeholder="Enter First Name">
