--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
       <div id = "c2">
         <form action="#null" method="get" autocomplete="on">
           <fieldset>
-            <p><label for = "firstname">First Name:</label></p>
+            <label for = "firstname">First Name:</label>
             <input type="text" name ="f_name" id ="firstname" placeholder="Enter First Name">
 
-            <p><label for = "lastname">Last Name:</label></p>
+            <label for = "lastname">Last Name:</label>
             <input type="text" name ="l_name" id ="lastname" placeholder="Enter Last Name">
 
-            <p><label for = "emailid">Email Address:</label></p>
+            <label for = "emailid">Email Address:</label>
             <input type = "email" name = "email_id" id ="emailid" placeholder = "abcd13@gmail.com">
 
           </fieldset>
