--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
         </form>
       </div>
     </div>
-    <h3 id= "change">"Continuous improvement is better than delayed perfection" - Mark Twain </h3>
-    <button onclick="myFunction()" class="button1">Inspire Me</button>
+    <div id="quote">
+      <h3 id= "change">"Continuous improvement is better than delayed perfection" - Mark Twain </h3>
+      <button class="button1">Inspire Me</button>
+    </div>
   </body>
 </html>
