unbinded js and html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <div id="quote">
       <h3 id= "change">"Continuous improvement is better than delayed perfection" - Mark Twain </h3>
-      <button class="button1">Inspire Me</button>
+      <button id= "button1">Inspire Me</button>
     </div>
   </body>
 </html>
