added required to email

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <label for = "lastname">Last Name:</label>
             <input type="text" name ="l_name" id ="lastname" placeholder="Enter Last Name">
             <label for = "emailid">Email Address:</label>
-            <input type = "email" name = "email_id" id ="emailid" placeholder = "abcd13@gmail.com">
+            <input type = "email" name = "email_id" id ="emailid" placeholder = "abcd13@gmail.com" required>
           </fieldset>
             <input type ="submit" value = "Subscribe">
         </form>
