tried adding js validation

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <p>2)Learning tips & tricks on how you can make your resume S T A N D O U T </p>
       </div>
       <div id = "c2">
-        <form action="#null" method="get" autocomplete="on">
+        <form name="form1" action="#null" method="get" autocomplete="on" onsubmit="return valForm()">
           <fieldset>
             <label for = "firstname">First Name:</label>
             <input type="text" name ="f_name" id ="firstname" placeholder="Enter First Name">
             <label for = "lastname">Last Name:</label>
             <input type="text" name ="l_name" id ="lastname" placeholder="Enter Last Name">
             <label for = "emailid">Email Address:</label>
-            <input type = "email" name = "email_id" id ="emailid" placeholder = "abcd13@gmail.com" required>
+            <input type = "email" name = "email_id" id ="emailid" placeholder = "abcd13@gmail.com">
           </fieldset>
             <input type ="submit" value = "Subscribe">
         </form>
