fixing quote (moving it); font chnages

--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
     <div id = "c-container">
       <div id= "c1">
         <p>Benefits:</p>
-        <p>1)Getting specific opportunities that fit your criteria (i.e.: jobs, internships, or volunteering)</p>
-        <p>2)Learning tips & tricks on how you can make your resume S T A N D O U T </p>
+        <p>1) Getting specific opportunities that fit your criteria (i.e.: jobs, internships, or volunteering)</p>
+        <p>2) Learning tips & tricks on how you can make your resume S T A N D O U T </p>
+        <div id="quote">
+          <p id= "change">3)"Continuous improvement is better than delayed perfection" - Mark Twain </p>
+          <button id= "button1">Inspire Me</button>
+        </div>
       </div>
       <div id = "c2">
         <form name="form1" action="#null" method="get" autocomplete="on" onsubmit="return valForm()">
@@ -29,13 +33,9 @@
             <label for = "emailid">Email Address:</label>
             <input type = "email" name = "email_id" id ="emailid" placeholder = "abcd13@gmail.com">
           </fieldset>
-            <input type ="submit" value = "Subscribe">
+            <input type ="submit" value = "Subscribe Here!">
         </form>
       </div>
-    </div>
-    <div id="quote">
-      <h3 id= "change">"Continuous improvement is better than delayed perfection" - Mark Twain </h3>
-      <button id= "button1">Inspire Me</button>
     </div>
   </body>
 </html>
